#51681 Fix circle to be exactly 20 meters in RD